# event-reporter

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
reporter/: __main__.py  app.py  middlewares.py  schemas.py  utils.py
reporter/db/: base.py  model.py
reporter/db/migrations/: env.py
reporter/db/migrations/versions/: 4c1f3b5e38c6_first_migration.py
reporter/handlers/: __init__.py  event_handler.py  handlers.py  message_handler.py
